# LiveQualityMonitor

./: LiveQualityMonitor.sln  README.md
LiveQualityMonitor/: CMakeLists.txt  FlvReader.cpp  FlvReader.h  Inspector.cpp  Inspector.h  LiveQualityMonitor.vcxproj  SaveFlv.cpp  SaveFlv.h  main.cpp
LiveQualityMonitor/brisque_revised/: CMakeLists.txt  Makefile  brisque.cpp  brisque.h  brisquequality.sav  computescore.cpp  readme.txt  trainModel.cpp
LiveQualityPanel/: LiveQualityPanel.py  LiveQualityPanel.pyproj  config.cfg  monitor-static.html
LiveQualityPanel/templates/: index.html  monitor.html
